2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc, jhbuild/config.py,
	jhbuild/commands/base.py, jhbuild/frontends/terminal.py: added a quiet
	mode, activated by the quiet_mode variable in configuration variable or
	the -q/--quiet flag to build and buildone commands.  (closes: #503925)

2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: made Tarball module type a thin wrapper
	around Autotools module type and Tarball repository type; thus removing
	a lot of duplicated code.

2008-01-04  Emmanuele Bassi  <ebassi@gnome.org>

	* moduleset/gnome-2.22.modules: Fix the repository location for
	pyclutter.

2008-01-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: updated write_dot() method to work with newer
	module types and to display branch name in label when appropriate.

2008-01-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: protect tree_id() against svn info
	errors.

2008-01-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/__init__.py, jhbuild/commands/base.py,
	jhbuild/commands/info.py: Display usage when buildone, updatone or info
	commands are called without a module parameter.

2008-01-01  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.22.modules: Added gstreammermm. Removed giomm 
	because that code is now in glibmm.

2007-12-31  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: Gucharmap doesn't depend on
	libgnomeui anymore.

2007-12-31  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/mtn.py, modulesets/moduleset.dtd: added
	support for Monotone, patch by Gary Kramlich, slightly edited by
	myself.  (closes: #481742)

	* modulesets/gnome-2.22.modules: added pidgin, as it uses Monotone.

2007-12-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.22.modules: libtelepathy depends on
	telepathy-glib.

2007-12-28  Frederic Peters  <fpeters@0d.be>
