@@ -57,6 +57,7 @@ nopoison      = False  # don't poison modules on failure
 
 interact      = True   # whether to interact with the user.
 quiet_mode    = False  # whether to display running commands output
+progress_bar  = True   # whether to display a progress bar when running in quiet mode
 
 # checkout modes. For VCS directories, it specifies how the checkout
 # is done. We can also specify checkout modes for specific modules
