@@ -1,5 +1,12 @@
 2008-01-06  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/config.py, jhbuild/defaults.jhbuildrc,
+	jhbuild/frontends/terminal.py: added a progress bar in quiet mode, as
+	in mockup in bug #503925; on by default, with possibility to disable
+	with progress_bar configuration variable.
+
+2008-01-06  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/defaults.jhbuildrc, jhbuild/config.py,
 	jhbuild/commands/base.py, jhbuild/frontends/terminal.py: added a quiet
 	mode, activated by the quiet_mode variable in configuration variable or
